Fix spacing on thanks and get in touch pages

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -101,6 +101,7 @@ ul.inline li {
 
 .landing-page {
   text-align: center;
+  margin: 0 10px;
 }
 
 #home {
@@ -198,5 +199,11 @@ ul.inline li {
 
   i {
     font-weight: bold;
+  }
+}
+
+#thanks {
+  @media (min-width: $screen-sm-min) {
+    margin: 0 20%;
   }
 }
